# AiAutoMiniCPM

./: .gitignore  README.md  build.gradle.kts  build_mnn_core.ps1  gradle.properties  local.properties  settings.gradle.kts
MNN_Repo/project/android/: build.gradle  nativepub.gradle
MNN_Repo/tools/cv/: CMakeLists.txt
MNN_Repo/transformers/llm/engine/: CMakeLists.txt
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/aiautominitest/: App.kt  MainActivity.kt
app/src/main/java/com/example/aiautominitest/asr/: IAsrEngine.kt  MockAsrEngine.kt  SherpaOnnxAsrEngine.kt
app/src/main/java/com/example/aiautominitest/audio/: AudioRecorder.kt
app/src/main/java/com/example/aiautominitest/core/: IChatEngine.kt  MNNLLMBridge.kt  NativeChatEngine.kt
app/src/main/java/com/example/aiautominitest/data/database/: AppDatabase.kt  ChatMessageDao.kt
app/src/main/java/com/example/aiautominitest/data/model/: ChatMessage.kt  (+1 more)
app/src/main/java/com/example/aiautominitest/di/: AppContainer.kt
app/src/main/java/com/example/aiautominitest/tts/: ITtsEngine.kt
app/src/main/java/com/example/aiautominitest/utils/: AssetUtils.kt
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  item_message_assistant.xml  item_message_user.xml  view_voice_button.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: MNN_完整教程.md  PDF导出指南.md  README_VOICE.md  implementation_plan.md  task.md  使用指南.md  聊天功能开发报告.md  语音功能开发完成报告.md  语音功能手动集成指南.md  语音功能集成说明.md  集成验证报告.md  项目校验报告.md
(+9 files in other folders)
